--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   // Required
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Kien's First Downloader",
-    "version": "1.6.3",
+    "version": "2.0.0",
 
   // Recommended
     "description": "Kien's redbubble image downloader",
@@ -27,14 +27,14 @@
       }
     ],
     "background": {
-      "scripts": ["background.js"],
-      "persistent": false
+      "service_worker": "background.js",
+      "type": "module"
     },
     "permissions": [
       "downloads"
     ],
   // Pick one (or none)
-    "browser_action": {
+    "action": {
       "default_icon": "icon16.png"
       ,"default_popup": "popup.html"
     }/*,
